# flask-bcrypt-stubs

./: LICENSE  README.md  pyproject.toml  stubtest-allowlist.txt
.github/workflows/: ci.yml  release.yml
src/flask_bcrypt/: __init__.pyi
